--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "tachyons": "^4.11.1"
+    "tachyons": "^4.11.1",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
