--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "my-weather",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "10.16.3"
+  },
   "dependencies": {
     "@material-ui/core": "^4.5.2",
     "@material-ui/icons": "^4.5.1",
